# Informer

./: .gitignore  main_informer.py  pyproject.toml
data/: data_loader.py
exp/: exp_basic.py  exp_informer.py
models/: embed.py  encoder.py  model.py
results/informer_WTH_ftM_sl96_ll48_pl24_dm512_nh8_el2_dl1_df2048_atprob_fc5_ebtimeF_dtTrue_mxTrue_test_0/: metrics.npy
tests/: version.ipynb
utils/: masking.py
